spacing for page 2 fixed

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@
   color: white;
 }
 .urlField{
-  width: 60%;
+  width: 65%;
   margin-right:2.5%;
   border-style: solid;
   border-width: 1px;
@@ -43,17 +43,13 @@
   height: 40px;
 }
 .labelField{
-  width: 35%;
+  width: 30%;
   margin-left:2.5%;
   border-style: solid;
   border-width: 1px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   height: 40px;
-  padding-top: 7.5px;
-  padding-left:7px;
-  padding-right:7px;
-  display: inline-block;
   background-color: #ededed;
 }
 }
